cmake_minimum_required(VERSION 3.19)
project(KaoYan)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
add_executable(InsertSort Sort/InsertSort.cpp)
add_executable(BubbleSort Sort/BubbleSort.cpp)
add_executable(QuickSort Sort/QuickSort.cpp)
add_executable(SelectSort Sort/SelectSort.cpp)
add_executable(MergeSort Sort/MergeSort.cpp)
add_executable(BucketSort Sort/BucketSort.cpp)
add_executable(HeapSort Sort/HeapSort.cpp)
add_executable(ShellSort Sort/ShellSort.cpp)
add_executable(BinarySearch Search/BinarySearch.cpp)
add_executable(KMP Search/KMP.cpp)
add_executable(SqSearch Search/SqSearch.cpp)
add_executable(deleteRep Array/deleteRep.cpp)
add_executable(Hash String/Hash.cpp)
add_executable(RadixSort Sort/RadixSort.cpp)
add_executable(Matrix C/Matrix.c)
add_executable(Matrix2 C/Matrix2.c)
add_executable(Matrix3 C/Matrix3.c)
add_executable(strlen C/strlen.c)
add_executable(strPointer C/strPointer.c)
add_executable(strPointer2 C/strPointer2.c)
add_executable(qsort C/qsort.c)
add_executable(isPowerOfFour C/isPowerOfFour.cpp)
add_executable(FunctionPointer C/FunctionPointer.c)
add_executable(SecondPointer C/SecondPointer.c)
add_executable(enum C/enum.c)
add_executable(calloc C/calloc.cpp)
add_executable(malloc C/malloc.c)
add_executable(realloc C/realloc.cpp)
add_executable(malloc2 C/malloc2.cpp)
add_executable(free C/free.cpp)
add_executable(MinHeightTree Tree/MinHeightTree.cpp)
add_executable(SearchBST Tree/SearchBST.cpp)
add_executable(isBalanced Tree/isBalanced.cpp)
add_executable(MaxDepth Tree/MaxDepth.cpp)
add_executable(FrequencySort Sort/FrequencySort.cpp)
add_executable(minDepth Tree/minDepth.cpp)
add_executable(sortArrayByParity Sort/sortArrayByParity.cpp)
add_executable(sortArrayByParityII Sort/sortArrayByParityII.cpp)
add_executable(intersection Array/intersection.cpp)
add_executable(RelativeSortArray Sort/RelativeSortArray.cpp)
add_executable(findRepeatNumber Array/findRepeatNumber.cpp)
add_executable(RunningSum Array/RunningSum.cpp)
add_executable(RemoveOutermostParentheses Stack/RemoveOutermostParentheses.cpp)
add_executable(backtrack C/backtrack.cpp)
add_executable(ThreeSum Array/ThreeSum.cpp)
add_executable(ThreeSumCloset Array/ThreeSumCloset.cpp)
add_executable(PalindromeNumber String/PalindromeNumber.cpp)
add_executable(RotateList List/RotateList.cpp)
add_executable(PascalTriangle Array/PascalTriangle.cpp)
add_executable(SortList List/SortList.cpp)
add_executable(SortColor Array/SortColor.cpp)
add_executable(Shuffle Sort/Shuffle.cpp)
add_executable(findMaxLength Array/findMaxLength.cpp)
add_executable(SumOfUniqueElements Array/SumOfUniqueElements.cpp)
add_executable(MaximumProductofTwoElementsinanArray Array/MaximumProductofTwoElementsinanArray.cpp)
add_executable(RandomizedSet Hash/RandomizedSet.cpp)
add_executable(containsDuplicate Hash/containsDuplicate.cpp)
add_executable(containsDuplicateII Hash/containsDuplicateII.cpp)
add_executable(BFS1 C/BFS1.cpp)
add_executable(Heap C/Heap.cpp)
add_executable(algorithm C/algorithm.cpp)
add_executable(BST Tree/BST.cpp)
add_executable(AVL Tree/AVL.cpp)